<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txt_player_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/player_check"
        android:textSize="20sp"
        android:layout_marginTop="100dp">
    </TextView>

    <ImageView
        android:id="@id/image_person"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_person_blue_200dp">
    </ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/caution_check"
        android:textSize="20sp"></TextView>

    <Button
        android:id="@+id/btn_check_number"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="15dp"
        android:background="@drawable/round_primary"
        android:text="@string/btn_number_check"
        android:textColor="@android:color/white"
        android:textSize="20sp"></Button>

</LinearLayout>